--- a/assets/main/sass/layout/_footer.scss
+++ b/assets/main/sass/layout/_footer.scss
@@ -226,12 +226,15 @@
 		}
 
 		@include breakpoint('<=xsmall') {
+			font-size: 0.7em;
+			
 			ul {
 				li {
-					border-left: 0;
-					margin: 1rem 0 0 0;
-					padding-left: 0;
-					display: block;
+					border-left: solid 1px;
+					margin-left: 0.5rem;
+					padding-left: 0.5rem;
+					line-height: 0.5rem;
+					display: inline-block;
 
 					&:first-child {
 						margin-top: 0;
